--- a/MenzaPP/Views/Shared/_Layout.cshtml
+++ b/MenzaPP/Views/Shared/_Layout.cshtml
@@ -22,8 +22,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Menze", "Index","Menzas")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Podatci", "Index", "Korisnik")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
