--- a/MenzaPP/Views/Menzas/Index.cshtml
+++ b/MenzaPP/Views/Menzas/Index.cshtml
@@ -20,9 +20,7 @@
             @Html.DisplayFor(modelItem => item.adresa)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
+            @Html.ActionLink("Jelovnik", "Jelovnik", new { id=item.id }) 
         </td>
     </tr>
 }
