--- a/MenzaPP/Views/Menzas/Jelovnik.cshtml
+++ b/MenzaPP/Views/Menzas/Jelovnik.cshtml
@@ -11,7 +11,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.datum)
+            @Html.DisplayName("Datum")
         </dt>
 
         <dd>
@@ -19,7 +19,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.jelovnikContent)
+            @Html.DisplayName("Jelovnik")
         </dt>
 
         <dd>
@@ -27,7 +27,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Menza.naziv)
+            @Html.DisplayName("Ime menze")
         </dt>
 
         <dd>
